# DevOps-Security

./: Dockerfile  README.TXT  README.md  install_kubernetes.sh
.github/workflows/: build.yaml
content/: .dockerignore  app.py  db.sqlite3  pyproject.toml  quoter_templates.py  style.css
kubernetes/: deployment.yaml  nginx-service.yaml
postman/: collections.yaml
postman/collections/: Integration Testing.json
