[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Saxion"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.5"
markupsafe = "2.1.5"
jinja2 = ">=3.1.5"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
