[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Saxion"]

[tool.poetry.dependencies]
python = "^3.11"

# Upgrade Flask to a secure, modern version that supports Jinja2 >= 3.1.5
flask = "^2.2.5"

# Explicitly require a patched version of Jinja2 (CVE-2024-56201 fix)
jinja2 = ">=3.1.5"

# Keep MarkupSafe updated and compatible
markupsafe = ">=2.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
